[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/og.gd" type="Script" id=1]
[ext_resource path="res://icon/og1.png" type="Texture" id=2]

[node name="og" type="Node2D"]
script = ExtResource( 1 )

[node name="og_Sprite" type="TextureRect" parent="."]
margin_left = -34.0
margin_top = -34.0
margin_right = 34.0
margin_bottom = 34.0
texture = ExtResource( 2 )

[connection signal="mouse_entered" from="og_Sprite" to="." method="_on_og_Sprite_mouse_entered"]
[connection signal="mouse_exited" from="og_Sprite" to="." method="_on_og_Sprite_mouse_exited"]
